--- a/po/ca.po
+++ b/po/ca.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: homebank\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-07 11:54+0200\n"
-"PO-Revision-Date: 2016-06-05 11:22+0000\n"
-"Last-Translator: Joan Duran <jodufi@gmail.com>\n"
+"PO-Revision-Date: 2016-12-03 08:14+0000\n"
+"Last-Translator: AniolOliver <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-11-06 07:52+0000\n"
-"X-Generator: Launchpad (build 18246)\n"
+"X-Launchpad-Export-Date: 2016-12-07 19:36+0000\n"
+"X-Generator: Launchpad (build 18292)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:876
 msgid "HomeBank"
@@ -484,7 +484,7 @@ msgstr "Desa el fitxer actual"
 
 #: ../src/dsp_mainwindow.c:176
 msgid "Save _As..."
-msgstr ""
+msgstr "Anomena i _desa..."
 
 #: ../src/dsp_mainwindow.c:176
 msgid "Save the current file with a different name"
@@ -500,7 +500,7 @@ msgstr "Recupera una versió desada d'aquest fitxer"
 
 #: ../src/dsp_mainwindow.c:179
 msgid "Properties..."
-msgstr ""
+msgstr "Propietats..."
 
 #: ../src/dsp_mainwindow.c:179
 msgid "Configure the file"
@@ -516,7 +516,7 @@ msgstr "_Surt"
 
 #: ../src/dsp_mainwindow.c:181
 msgid "Quit HomeBank"
-msgstr ""
+msgstr "Surt de HomeBank"
 
 #. Exchange
 #: ../src/dsp_mainwindow.c:184
@@ -551,12 +551,12 @@ msgstr "Preferències..."
 
 #: ../src/dsp_mainwindow.c:191
 msgid "Configure HomeBank"
-msgstr ""
+msgstr "Configura el HomeBank"
 
 #. ManageMenu
 #: ../src/dsp_mainwindow.c:194
 msgid "Currencies..."
-msgstr ""
+msgstr "Monedes..."
 
 #: ../src/dsp_mainwindow.c:194
 msgid "Configure the currencies"
@@ -1787,11 +1787,11 @@ msgstr "exclou de qualsevol _informe"
 
 #: ../src/ui-archive.c:47
 msgid "Scheduled"
-msgstr ""
+msgstr "Planificat"
 
 #: ../src/ui-archive.c:48
 msgid "Template"
-msgstr ""
+msgstr "Plantilla"
 
 #: ../src/ui-archive.c:55
 msgid "Possible"
@@ -1891,7 +1891,7 @@ msgstr "Si esborreu una assignació,  aquesta no es podrà recuperar."
 
 #: ../src/ui-assign.c:693
 msgid "Disabled"
-msgstr ""
+msgstr "Inhabilitat"
 
 #: ../src/ui-assign.c:694
 msgid "If empty"
@@ -1899,7 +1899,7 @@ msgstr ""
 
 #: ../src/ui-assign.c:695
 msgid "Overwrite"
-msgstr ""
+msgstr "Sobreescriu"
 
 #: ../src/ui-assign.c:714
 msgid "Manage Assignments"
@@ -1920,7 +1920,7 @@ msgstr ""
 
 #: ../src/ui-assign.c:811
 msgid "Match _case"
-msgstr ""
+msgstr "Distingeix majúscules i minúscules"
 
 #: ../src/ui-assign.c:816
 msgid "Use _regular expressions"
