--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: homebank\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-08-07 11:54+0200\n"
-"PO-Revision-Date: 2016-08-23 03:51+0000\n"
-"Last-Translator: Binnette <Unknown>\n"
+"PO-Revision-Date: 2016-12-05 04:00+0000\n"
+"Last-Translator: Tom <Unknown>\n"
 "Language-Team: fr <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-11-06 07:52+0000\n"
-"X-Generator: Launchpad (build 18246)\n"
+"X-Launchpad-Export-Date: 2016-12-07 19:37+0000\n"
+"X-Generator: Launchpad (build 18292)\n"
 "Language: fr\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:876
@@ -1936,7 +1936,7 @@ msgstr "Affecter le tiers"
 
 #: ../src/ui-assign.c:860
 msgid "Assign category"
-msgstr "Affecter la categérie"
+msgstr "Affecter la catégorie"
 
 #: ../src/ui-assign.c:888
 msgid "Assign payment"
