--- a/po/pl.po
+++ b/po/pl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: homebank\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-08-07 11:54+0200\n"
-"PO-Revision-Date: 2016-08-20 15:46+0000\n"
-"Last-Translator: Jakub Mieszczanin <jakub.mieszczanin@gmail.com>\n"
+"PO-Revision-Date: 2016-11-07 21:52+0000\n"
+"Last-Translator: spaspaspa00 <Unknown>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-11-06 07:52+0000\n"
-"X-Generator: Launchpad (build 18246)\n"
+"X-Launchpad-Export-Date: 2016-12-07 19:36+0000\n"
+"X-Generator: Launchpad (build 18292)\n"
 "Language: pl\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:876
@@ -82,7 +82,7 @@ msgstr "OK"
 
 #: ../src/dsp_account.c:357
 msgid "Multiple edit transactions"
-msgstr ""
+msgstr "Zmień wiele transakcji"
 
 #: ../src/dsp_account.c:372 ../src/ui-payee.c:921 ../src/ui-transaction.c:958
 msgid "Pa_yment:"
@@ -136,6 +136,8 @@ msgid ""
 "Are you sure you want to convert this account\n"
 "to Euro as Major currency?"
 msgstr ""
+"Czy na pewno chcesz zmienić\n"
+"główną walutę tego konta na Euro?"
 
 #: ../src/dsp_account.c:702
 msgid "_Convert"
@@ -148,7 +150,7 @@ msgstr "Żadna transakcja nie została zmieniona"
 #: ../src/dsp_account.c:733
 #, c-format
 msgid "transaction changed: %d"
-msgstr ""
+msgstr "transakcja zmieniona: %d"
 
 #: ../src/dsp_account.c:736
 msgid "Automatic assignment result"
@@ -158,7 +160,9 @@ msgstr "Wynik automatycznego przypisywania"
 msgid ""
 "Do you want to create a template with\n"
 "each of the selected transaction ?"
-msgstr "Czy chcesz utworzyć szablon dla każdej wybranej transakcji?"
+msgstr ""
+"Czy chcesz utworzyć szablon na podstawie\n"
+"każdej zaznaczonej transakcji?"
 
 #: ../src/dsp_account.c:1518
 msgid ""
@@ -240,11 +244,11 @@ msgstr "Otwórz filtr listy"
 
 #: ../src/dsp_account.c:2166
 msgid "Convert to Euro..."
-msgstr "Przekształć do Euro"
+msgstr "Przelicz na Euro..."
 
 #: ../src/dsp_account.c:2166
 msgid "Convert this account to Euro currency"
-msgstr ""
+msgstr "Przelicz to konto na walutę Euro"
 
 #: ../src/dsp_account.c:2168
 msgid "_Add..."
@@ -296,19 +300,19 @@ msgstr "Oznacz wybrane transakcje jako uzgodnione"
 
 #: ../src/dsp_account.c:2176
 msgid "_Multiple Edit..."
-msgstr "_wielokrotna edycja"
+msgstr "Zmień wiele..."
 
 #: ../src/dsp_account.c:2176
 msgid "Edit multiple transaction"
-msgstr "Edytuj wiele transakcji"
+msgstr "Zmień jednocześnie wszystkie zaznaczone transakcje"
 
 #: ../src/dsp_account.c:2177
 msgid "Create template..."
-msgstr "Twórz szablon..."
+msgstr "Utwórz szablon..."
 
 #: ../src/dsp_account.c:2177
 msgid "Create template"
-msgstr "Stwórz szablon"
+msgstr "Utwórz szablon"
 
 #: ../src/dsp_account.c:2178
 msgid "_Delete..."
@@ -320,11 +324,11 @@ msgstr "Usuń zaznaczone transakcje"
 
 #: ../src/dsp_account.c:2180
 msgid "Auto. assignments"
-msgstr "automatyczne przypisania"
+msgstr "Automatyczne przypisania"
 
 #: ../src/dsp_account.c:2180
 msgid "Run automatic assignments"
-msgstr "Uruchom automatyczne przypisywania"
+msgstr "Uruchom automatyczne przypisania"
 
 #: ../src/dsp_account.c:2181
 msgid "Export QIF..."
@@ -459,7 +463,7 @@ msgstr "_Nowy"
 
 #: ../src/dsp_mainwindow.c:173
 msgid "Create a new file"
-msgstr "Stwórz nowy plik"
+msgstr "Utwórz nowy plik"
 
 #: ../src/dsp_mainwindow.c:174
 msgid "_Open..."
@@ -476,7 +480,7 @@ msgstr "_Zapisz"
 
 #: ../src/dsp_mainwindow.c:175
 msgid "Save the current file"
-msgstr "Zapisuje bieżący plik"
+msgstr "Zapisz bieżący plik"
 
 #: ../src/dsp_mainwindow.c:176
 msgid "Save _As..."
@@ -629,7 +633,7 @@ msgstr "Ustawienia zaplanowanych transakcji..."
 
 #: ../src/dsp_mainwindow.c:205
 msgid "Configure the transaction scheduler"
-msgstr "Skonfiguruj zaplanowane transakcje"
+msgstr "Konfiguruj zaplanowane transakcje"
 
 #: ../src/dsp_mainwindow.c:206
 msgid "Post scheduled"
@@ -913,7 +917,7 @@ msgstr "Pokaż"
 
 #: ../src/dsp_mainwindow.c:2577
 msgid "Statistics"
-msgstr "Statystyka"
+msgstr "Statystyki"
 
 #. column: Balance
 #: ../src/dsp_mainwindow.c:2583 ../src/list_operation.c:54
@@ -1696,8 +1700,8 @@ msgid ""
 "Drag & drop to change the order\n"
 "Double-click to rename"
 msgstr ""
-"Złap i przeciągnij do zmiany kolejności\n"
-"Dwókrotnie kliknij do zmiany nazwy"
+"Przeciągnij i upuść aby zmienić kolejność\n"
+"Dwukrotnie kliknij aby zmienić nazwę"
 
 #: ../src/ui-account.c:1241 ../src/ui-archive.c:1148 ../src/ui-assign.c:765
 #: ../src/ui-currency.c:1531 ../src/ui-transaction.c:1106
@@ -1886,7 +1890,7 @@ msgstr "Wyłączony"
 
 #: ../src/ui-assign.c:694
 msgid "If empty"
-msgstr ""
+msgstr "Jeżeli puste"
 
 #: ../src/ui-assign.c:695
 msgid "Overwrite"
@@ -1911,7 +1915,7 @@ msgstr "Z_najdź"
 
 #: ../src/ui-assign.c:811
 msgid "Match _case"
-msgstr ""
+msgstr "Uwzględnij wielkość liter"
 
 #: ../src/ui-assign.c:816
 msgid "Use _regular expressions"
@@ -1919,7 +1923,7 @@ msgstr "Użyj wy_rażeń regularnych"
 
 #: ../src/ui-assign.c:831
 msgid "Assign payee"
-msgstr ""
+msgstr "Przypisz odbiorcę"
 
 #: ../src/ui-assign.c:860
 msgid "Assign category"
@@ -2022,7 +2026,7 @@ msgstr "Transakcja"
 
 #: ../src/ui-assist-import.c:132 ../src/ui-assist-import.c:958
 msgid "create new"
-msgstr "stwórz nowe"
+msgstr "utwórz nowe"
 
 #: ../src/ui-assist-import.c:134 ../src/ui-assist-import.c:970
 msgid "use existing"
@@ -2100,12 +2104,12 @@ msgstr "konto: %d - transakcja: %d -  kontrahent: %d - kategoria: %d"
 
 #: ../src/ui-assist-import.c:1347
 msgid "Some date convertion failed"
-msgstr ""
+msgstr "Konwersja niektórych dat nie powiodła się"
 
 #: ../src/ui-assist-import.c:1348
 #, c-format
 msgid "Reload using date order: '%s' ?"
-msgstr ""
+msgstr "Załadować ponownie używając formatu daty: '%s' ?"
 
 #: ../src/ui-assist-import.c:1563
 #, c-format
@@ -2265,6 +2269,8 @@ msgid ""
 "The CSV file must contains the exact numbers of column,\n"
 "separated by a semi-colon, please see the help for more details."
 msgstr ""
+"Plik CSV musi zawierać określoną liczbę kolumn,\n"
+"oddzielonych średnikami, sprawdź pomoc aby uzyskać więcej szczegółów"
 
 #: ../src/ui-budget.c:693
 msgid "Are you sure you want to clear input?"
@@ -2446,11 +2452,11 @@ msgstr "_Symbol"
 
 #: ../src/ui-currency.c:861 ../src/ui-pref.c:1435
 msgid "Is pre_fix"
-msgstr ""
+msgstr "Umieść przed kwotą"
 
 #: ../src/ui-currency.c:866 ../src/ui-pref.c:1440
 msgid "_Decimal char:"
-msgstr ""
+msgstr "Separator _dziesiętny:"
 
 #: ../src/ui-currency.c:873 ../src/ui-pref.c:1447
 msgid "_Frac digits:"
@@ -2458,7 +2464,7 @@ msgstr "Miejsca dziesiętne:"
 
 #: ../src/ui-currency.c:880 ../src/ui-pref.c:1454
 msgid "_Grouping char:"
-msgstr ""
+msgstr "Separator _grup cyfr:"
 
 #: ../src/ui-currency.c:1040
 msgid "Select base currency"
@@ -2474,21 +2480,23 @@ msgstr "Kod ISO"
 
 #: ../src/ui-currency.c:1168
 msgid "Update online error"
-msgstr ""
+msgstr "Błąd aktualizacji online"
 
 #: ../src/ui-currency.c:1301
 msgid "If you delete a currency, it will be permanently lost."
-msgstr "Jeśli usuniesz walutę, będzie bezpowrotnie stracona."
+msgstr "Jeśli usuniesz walutę, nie będzie można jej odzyskać."
 
 #: ../src/ui-currency.c:1345
 msgid "Change the base currency"
-msgstr "Zmień bazową walutę"
+msgstr "Zmień walutę bazową"
 
 #: ../src/ui-currency.c:1346
 msgid ""
 "If you proceed, rates of other currencies\n"
 "will be set to 0, don't forget to update it"
 msgstr ""
+"Jeśli będziesz kontynuował, kursy innych walut\n"
+"zostaną ustawione na 0, nie zapomnij ich uaktualnić"
 
 #: ../src/ui-currency.c:1461
 msgid "Currencies"
@@ -2500,7 +2508,7 @@ msgstr "Aktualizuj online"
 
 #: ../src/ui-currency.c:1543
 msgid "Set as base"
-msgstr ""
+msgstr "Ustaw jako bazową"
 
 #: ../src/ui-dialogs.c:176
 msgid "File statistics"
@@ -2552,7 +2560,7 @@ msgid ""
 "If you don't save, changes will be permanently lost.\n"
 "Number of changes: %d."
 msgstr ""
-"Jeśli nie zapiszesz, zmiany zostaną stracone.\n"
+"Jeśli nie zapiszesz zmian, zostaną one bezpowrotnie utracone.\n"
 "Liczba zmian: %d."
 
 #: ../src/ui-dialogs.c:664
@@ -2565,7 +2573,7 @@ msgstr "Wybierz spośród dostępnych transakcji..."
 
 #: ../src/ui-dialogs.c:784
 msgid "Select an action:"
-msgstr "Wybierz akcję"
+msgstr "Wybierz akcję:"
 
 #: ../src/ui-dialogs.c:788
 msgid "create a new transaction"
@@ -2676,7 +2684,7 @@ msgstr "Wszystkie"
 #: ../src/ui-filter.c:775 ../src/ui-filter.c:824 ../src/ui-filter.c:873
 #: ../src/ui-pref.c:106 ../src/ui-transaction.c:57
 msgid "None"
-msgstr "Żadna"
+msgstr "Brak"
 
 #: ../src/ui-filter.c:779 ../src/ui-filter.c:828 ../src/ui-filter.c:877
 msgid "Invert"
@@ -2782,13 +2790,15 @@ msgstr "Domyślna kategoria"
 
 #: ../src/ui-payee.c:743
 msgid "Delete unused payee"
-msgstr ""
+msgstr "Usuń nieużywanych odbiorców"
 
 #: ../src/ui-payee.c:744
 msgid ""
 "Are you sure you want to\n"
 "permanently delete unused payee?"
 msgstr ""
+"Czy jesteś pewien, że chcesz\n"
+"trwale usunąć nieużywanych odbiorców?"
 
 #: ../src/ui-payee.c:909
 msgid "Default"
@@ -2801,7 +2811,7 @@ msgid ""
 "from '%s' to '%s',\n"
 "this name already exists."
 msgstr ""
-"Nie można zmienić nazwy tej opłaty\n"
+"Nie można zmienić nazwy tego odbiorcy\n"
 "z '%s' na '%s',\n"
 "ponieważ taka nazwa już istnieje."
 
@@ -2816,7 +2826,7 @@ msgid ""
 "will be moved to the payee selected below."
 msgstr ""
 "Transakcje przypisane do tego odbiorcy,\n"
-"zostaną przeniesione na innego, wskazanego poniżej."
+"zostaną przeniesione na wskazanego poniżej."
 
 #: ../src/ui-payee.c:1052
 #, c-format
@@ -2878,15 +2888,15 @@ msgstr "Tekst obok ikon"
 
 #: ../src/ui-pref.c:107
 msgid "Horizontal"
-msgstr ""
+msgstr "Pozioma"
 
 #: ../src/ui-pref.c:108
 msgid "Vertical"
-msgstr ""
+msgstr "Pionowa"
 
 #: ../src/ui-pref.c:109
 msgid "Both"
-msgstr ""
+msgstr "Obie"
 
 #: ../src/ui-pref.c:116
 msgid "Tango light"
@@ -2966,7 +2976,7 @@ msgstr "_Import:"
 
 #: ../src/ui-pref.c:1183
 msgid "_Export:"
-msgstr "_Eksportuj:"
+msgstr "_Eksport:"
 
 #: ../src/ui-pref.c:1254
 msgid "Initial filter"
@@ -3015,7 +3025,7 @@ msgstr "_Ustawienie:"
 
 #: ../src/ui-pref.c:1498
 msgid "_Format:"
-msgstr ""
+msgstr "_Format:"
 
 #: ../src/ui-pref.c:1511
 msgid ""
@@ -3095,7 +3105,7 @@ msgstr "Lista kolumn"
 
 #: ../src/ui-pref.c:1638
 msgid "Drag & drop to change the order"
-msgstr "Przeciągnij i upuść by zmienić kolejność"
+msgstr "Przeciągnij i upuść aby zmienić kolejność"
 
 #: ../src/ui-pref.c:1665
 msgid "_Language:"
@@ -3109,7 +3119,7 @@ msgstr "Paski _narzędzi:"
 #. data->CM_ruleshint = widget;
 #: ../src/ui-pref.c:1682
 msgid "_Grid line:"
-msgstr ""
+msgstr "Linie siatki"
 
 #: ../src/ui-pref.c:1694
 msgid "Amount colors"
@@ -3145,7 +3155,7 @@ msgstr "Otwórz ostatnio otwarty plik"
 
 #: ../src/ui-pref.c:1781
 msgid "Update currencies online"
-msgstr ""
+msgstr "Aktualizuj waluty online"
 
 #: ../src/ui-pref.c:1791
 msgid "Fiscal year"
@@ -3158,7 +3168,7 @@ msgstr "Rozpoczyna się:"
 
 #: ../src/ui-pref.c:1814
 msgid "Main window reports"
-msgstr "Główne okno raportów"
+msgstr "Raporty w oknie głównym"
 
 #: ../src/ui-pref.c:1834
 msgid "_Default:"
@@ -3219,7 +3229,7 @@ msgstr "Dodaj transakcję"
 
 #: ../src/ui-transaction.c:51
 msgid "Inherit transaction"
-msgstr "Powtórz transakcję"
+msgstr "Powiel transakcję"
 
 #: ../src/ui-transaction.c:52
 msgid "Modify transaction"
@@ -3249,11 +3259,11 @@ msgstr ""
 
 #: ../src/ui-transaction.c:870 ../src/ui-widgets.c:273
 msgid "Search..."
-msgstr ""
+msgstr "Szukaj..."
 
 #: ../src/ui-transaction.c:906
 msgid "Show _scheduled"
-msgstr ""
+msgstr "Pokaż zaplanowane"
 
 #: ../src/ui-transaction.c:930
 msgid "_Date:"
@@ -3281,7 +3291,7 @@ msgstr ""
 
 #: ../src/ui-transaction.c:1105
 msgid "_Add & keep"
-msgstr ""
+msgstr "Dod_aj i zachowaj"
 
 #: ../src/ui-transaction.c:1113
 msgid "_Post"
@@ -3289,11 +3299,11 @@ msgstr "Zaksięguj"
 
 #: ../src/ui-transaction.c:1157
 msgid "Use a _template"
-msgstr ""
+msgstr "Użyj szablonu"
 
 #: ../src/ui-transaction.c:1201
 msgid "Warning: amount and category sign don't match"
-msgstr ""
+msgstr "Uwaga: kwota nie pasuje do znaku kategorii"
 
 #: ../src/ui-widgets.c:799
 msgid "Check"
