--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,25 @@
 
+2017-02-16  Maxime Doyen
+
+ Made 5.1.4 release.
+ * change: filter, reworked the layout
+ * change: filter, category select change now propagate to subcategories
+ * wish  : #1661806 show overdraft amount in account window (balance column)
+ * wish  : #1655542 improve handling of end of month scheduled transactions
+ * bugfix: sanity was not checking dst_account
+ * bugfix: sanity orphaned account was not working
+ * bugfix: #1663795 "show all" shows as enabled after opening another file
+ * bugfix: #1663789 both sides of internal transfers' accounts not changed
+ * bugfix: #1663399 display Order of Account Types (5.1.3)
+ * bugfix: #1662197 main window's upcoming transactions pane shifts downwards on every startup
+ * bugfix: #1662189 main window size/position saved only when using wm close (X) button
+ * bugfix: #1661279 memory Fault on homebank-5.1.1-1.fc25.x86_64 and later
+ * bugfix: #1660910 main window layout is not persisted
+ * bugfix: #1658538 balance Report crash when no txn at all
+ * bugfix: #1656720 save button in main window disabled despite pending changes
+ * bugfix: #1655626 libofx for windows bad utf-8 char import corrupt xml file 
+
+
 2017-01-22  Maxime Doyen
 
  Made 5.1.3 release.
@@ -7,15 +28,15 @@
  * wish  : #1645126 remember the size of columns listview in the main window
  * wish  : #1530784 easy way to see closed accounts in account list
  * wish  : #1164643 totals per Financial Institution in account summary
- * bugfix: #1658047 Euro major Lithuanian template corrections
- * bugfix: #1658045 Euro major settings: list countries alphabetically
- * bugfix: #1658043 Euro major feature calculates amounts incorrectly
+ * bugfix: #1658047 euro major Lithuanian template corrections
+ * bugfix: #1658045 euro major settings: list countries alphabetically
+ * bugfix: #1658043 euro major feature calculates amounts incorrectly
  * bugfix: #1656531 account combobox can be default set to disabled account
- * bugfix: #1653957 Importing QIF file with existing accounts 
- * bugfix: #1652994 Sorting for account in Statistics Report doen't work 
- * bugfix: #1652527 Balance report crash when no result
- * bugfix: #1649081 Exclude from budget option seems ignored
- * bugfix: #1649078 Remind operations are included in "today" balance calculation
+ * bugfix: #1653957 importing QIF file with existing accounts 
+ * bugfix: #1652994 sorting for account in Statistics Report doen't work 
+ * bugfix: #1652527 balance report crash when no result
+ * bugfix: #1649081 exclude from budget option seems ignored
+ * bugfix: #1649078 remind operations are included in "today" balance calculation
  * bugfix: #1648856 balance report "select all" is not working 
 
 
